<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingRight="@dimen/v50dp"
    android:paddingLeft="@dimen/v50dp"
    android:background="@android:color/transparent"
    tools:context="login.LoginFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:src="@drawable/ic_dac_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_member_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            android:layout_marginTop="@dimen/v20dp">

            <EditText
                android:id="@+id/et_member_no"
                style="@style/login_view_layout_et"
                android:textColorHint="@drawable/et_hint_unfocused"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:digits="@string/username_validation"
                android:hint="@string/et_hint_member_number"
                tools:text="M2500"/>

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:layout_below="@id/til_member_no"
                android:textColorHint="@color/colorWhite"
                android:layout_marginTop="@dimen/v8dp">

                <EditText
                    android:id="@+id/et_password"
                    style="@style/login_view_layout_et"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColorHint="@drawable/et_hint_unfocused"
                    android:hint="@string/et_hint_password"
                    tools:text="test"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/v20dp"
                android:background="@android:color/transparent"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txtSize12"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:layout_gravity="center_vertical|right"
                android:gravity="center"
                android:text="@string/tv_text_help"/>
        </FrameLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/login_view_layout_btn"
            android:fontFamily="@font/knockout_htf33_juniorheviwt"
            android:onClick="onLoginTap"
            android:text="@string/btn_text_login" />
    </LinearLayout>
</LinearLayout>
